--- a/src/app/Componentes/Categoria/formulario-categoria/formulario-categoria.component.html
+++ b/src/app/Componentes/Categoria/formulario-categoria/formulario-categoria.component.html
@@ -9,7 +9,7 @@
       <input type="text" formControlName="nome">
     </div>
     <div>
-      <button>Cadastrar nova categoria</button>
+      <button type="submit">Cadastrar nova categoria</button>
       <button (click)="btnRedirect($event, 'categoria')">Voltar</button>
     </div>
   </form>
