--- a/src/app/Componentes/Categoria/excluir-categoria/excluir-categoria.component.html
+++ b/src/app/Componentes/Categoria/excluir-categoria/excluir-categoria.component.html
@@ -1,1 +1,3 @@
-<p>excluir-categoria works!</p>
+<div>
+  <app-formulario-categoria [dadosCategoria]="categoria" [btnTitulo]="btnTitle" (onSubmitFunction)="excluirCategoria($event)"></app-formulario-categoria>
+</div>
