--- a/src/app/Componentes/Categoria/editar-categoria/editar-categoria.component.html
+++ b/src/app/Componentes/Categoria/editar-categoria/editar-categoria.component.html
@@ -1,3 +1,8 @@
-<div>
-  <app-formulario-categoria [dadosCategoria]="categoria" [btnTitulo]="btnTitle" (onSubmitFunction)="editarCategoria($event)"></app-formulario-categoria>
+<div *ngIf="this.categoria">
+  <app-formulario-categoria
+    [dadosCategoria]="categoria"
+    [btnTitulo]="btnTitle"
+    [btnAcao]="btnAcao"
+    (onSubmitFunction)="editarCategoria($event)">
+  </app-formulario-categoria>
 </div>
