Componente de tamanho finalizado

--- a/src/app/Componentes/Categoria/excluir-categoria/excluir-categoria.component.html
+++ b/src/app/Componentes/Categoria/excluir-categoria/excluir-categoria.component.html
@@ -1,3 +1,9 @@
-<div>
-  <app-formulario-categoria [dadosCategoria]="categoria" [btnTitulo]="btnTitle" (onSubmitFunction)="excluirCategoria($event)"></app-formulario-categoria>
+<div *ngIf="this.categoria">
+  <app-formulario-categoria
+  [dadosCategoria]="categoria"
+  [btnTitulo]="btnTitle"
+  (onSubmitFunction)="excluirCategoria($event)"
+  [btnAcao]="btnAcao"
+  [isDisabled]="true"
+  ></app-formulario-categoria>
 </div>
