--- a/src/app/Componentes/Tamanho/cadastro-tamanho/cadastro-tamanho.component.html
+++ b/src/app/Componentes/Tamanho/cadastro-tamanho/cadastro-tamanho.component.html
@@ -1,7 +1,7 @@
 <div>
-  <app-formulario-categoria
+  <app-formulario-tamanho
     [btnTitulo]="btnTitulo"
     (onSubmitFunction)="cadastroNovaCategoria($event)"
     [btnAcao]="btnAcao">
-  </app-formulario-categoria>
+  </app-formulario-tamanho>
 </div>
