--- a/src/app/Componentes/home/home.component.html
+++ b/src/app/Componentes/home/home.component.html
@@ -2,7 +2,7 @@
   <a href="">Home</a>
   <a href="">Produtos</a>
   <a href="" (click)="btnRedirect($event, 'categoria')">Categoria</a>
-  <a href="">Tamanho</a>
+  <a href="" (click)="btnRedirect($event, 'tamanho')">Tamanho</a>
   <a href="">Marca</a>
   <a href="">Loja</a>
 </div>
