Formulários de marca finalizado

--- a/src/app/Componentes/home/home.component.html
+++ b/src/app/Componentes/home/home.component.html
@@ -3,7 +3,7 @@
   <a href="">Produtos</a>
   <a href="" (click)="btnRedirect($event, 'categoria')">Categoria</a>
   <a href="" (click)="btnRedirect($event, 'tamanho')">Tamanho</a>
-  <a href="">Marca</a>
+  <a href="" (click)="btnRedirect($event, 'marca')">Marca</a>
   <a href="">Loja</a>
 </div>
 
