Componente do formulário e da loja finalizado

--- a/src/app/Componentes/home/home.component.html
+++ b/src/app/Componentes/home/home.component.html
@@ -4,7 +4,7 @@
   <a href="" (click)="btnRedirect($event, 'categoria')">Categoria</a>
   <a href="" (click)="btnRedirect($event, 'tamanho')">Tamanho</a>
   <a href="" (click)="btnRedirect($event, 'marca')">Marca</a>
-  <a href="">Loja</a>
+  <a href="" (click)="btnRedirect($event, 'loja')">Loja</a>
 </div>
 
 <div class="primeiro-container">
