Integração dos endpoints da loja finalizada

--- a/src/app/Componentes/Loja/cadastro-loja/cadastro-loja.component.html
+++ b/src/app/Componentes/Loja/cadastro-loja/cadastro-loja.component.html
@@ -1,1 +1,7 @@
-
+<div>
+  <app-formulario-loja
+  [btnAcao]="btnAcao"
+  [btnTitulo]="btnTitulo"
+  (onSubmitFunction)="cadastrarLoja($event)">
+  </app-formulario-loja>
+</div>
