--- a/src/app/Componentes/Loja/editar-loja/editar-loja.component.html
+++ b/src/app/Componentes/Loja/editar-loja/editar-loja.component.html
@@ -1,1 +1,8 @@
-<p>editar-loja works!</p>
+<div *ngIf="loja">
+  <app-formulario-loja
+  [btnAcao]="btnAcao"
+  [btnTitulo]="btnTitulo"
+  [dadosLoja]="loja"
+  (onSubmitFunction)="editarLoja($event)">
+  </app-formulario-loja>
+</div>
