Ajuste do formulário de produtos

--- a/src/app/Componentes/home/home.component.html
+++ b/src/app/Componentes/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <a href="">Home</a>
-  <a href="">Produtos</a>
+  <a href="" (click)="btnRedirect($event, 'produto')">Produtos</a>
   <a href="" (click)="btnRedirect($event, 'categoria')">Categoria</a>
   <a href="" (click)="btnRedirect($event, 'tamanho')">Tamanho</a>
   <a href="" (click)="btnRedirect($event, 'marca')">Marca</a>
