Componente produtosLoja iniciado

--- a/src/app/Componentes/Produto/editar-produto/editar-produto.component.html
+++ b/src/app/Componentes/Produto/editar-produto/editar-produto.component.html
@@ -3,7 +3,7 @@
   <app-formulario-produto
   [btnAcao]="btnAcao"
   [btnTitulo]="btnTitulo"
-  [visualizacaoProduto]="produto"
+  [dadosProduto]="produto"
   (onSubmitFunction)="editarProduto($event)">
   </app-formulario-produto>
 </div>
