--- a/src/app/Componentes/ProdutosLoja/cadastro-produto-loja/cadastro-produto-loja.component.html
+++ b/src/app/Componentes/ProdutosLoja/cadastro-produto-loja/cadastro-produto-loja.component.html
@@ -14,6 +14,10 @@
         }
       </select>
     </div>
+    <div>
+      <label>Quantidade: </label>
+      <input type="number" formControlName="quantidade_produto">
+    </div>
     <input type="hidden" formControlName="idloja">
     <div>
       <button [disabled]="!produtoLojaForm.valid" (click)="cadastroProdutoLoja()" type="submit">Cadastrar produto na loja {{ loja.nome }}</button>
