--- a/src/app/Componentes/home/home.component.html
+++ b/src/app/Componentes/home/home.component.html
@@ -26,34 +26,31 @@
     <thead>
       <tr>
         <th scope="col">Data da Venda</th>
-        <th scope="col">Nome do produto</th>
-        <th scope="col">Valor unitário</th>
-        <th scope="col">Marca</th>
-        <th scope="col">Tamanho</th>
-        <th scope="col">Categoria</th>
         <th scope="col">Loja</th>
-        <th scope="col">CNPJ</th>
-        <th scope="col" style="width: 1%;">Vendido?</th>
+        <th scope="col">Produto</th>
+        <th scope="col">Valor Unitário</th>
+        <th scope="col">Quantidade vendida</th>
+        <th scope="col">Total</th>
         <th scope="col"></th>
       </tr>
     </thead>
     <tbody>
-      @for (venda of vendas; track venda.data_venda) {
+      @for (venda of grupo_venda; track venda.idgrupovenda) {
+        @if (venda) {
         <tr>
-          <td>{{ venda.data_venda | date: 'dd/MM/yyyy'}}</td>
-          <td>{{ venda.produto_nome }}</td>
+          <td>{{ venda.data_venda | date : 'd/M/yy' }}</td>
+          <td>{{ venda.loja }}</td>
+          <td>{{ venda.produto }}</td>
           <td>{{ venda.valor_unitario }}</td>
-          <td>{{ venda.marca_nome }}</td>
-          <td>{{ venda.tamanho_nome }}</td>
-          <td>{{ venda.categoria_nome }}</td>
-          <td>{{ venda.loja_nome }}</td>
-          <td>{{ venda.cnpj }}</td>
-          <td>{{ venda.vendido === 'S' ? 'Sim' : 'Não' }}</td>
+          <td>{{ venda.quantidade_vendido }}</td>
+          <td>{{ venda.quantidade_vendido * venda.valor_unitario }}</td>
           <td class="text-end btn-action">
-            <button type="button" class="btn btn-primary btn-sm" style="margin-right: 1rem;">Editar</button>
+            <button type="button" (click)="aumentarQuantidade(venda.idgrupovenda)" class="btn btn-primary btn-sm" style="margin-right: 1rem;">++</button>
+            <button type="button" (click)="diminuirQuantidade(venda.idgrupovenda)" class="btn btn-danger btn-sm" style="margin-right: 1rem;">--</button>
             <button type="button" class="btn btn-danger btn-sm">Excluir</button>
           </td>
         </tr>
+      }
       }
     </tbody>
   </table>
